--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,6 +35,7 @@
     "formik": "^2.2.9",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
+    "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
     "react-icons": "^4.8.0",
@@ -45,11 +46,13 @@
     "react-toastify": "^9.1.1",
     "recharts": "^2.5.0",
     "regression": "^2.0.1",
+    "sass": "^1.62.1",
     "yup": "^1.1.1"
   },
   "devDependencies": {
     "@types/node": "^18.11.18",
     "@types/react": "^18.0.26",
+    "@types/react-circular-progressbar": "^1.1.0",
     "@types/react-dom": "^18.0.9",
     "@types/react-router-bootstrap": "^0.26.0",
     "@vitejs/plugin-react": "^3.0.0",
