--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,7 +30,7 @@
     "@tanstack/react-query": "^4.26.1",
     "@tanstack/react-query-devtools": "^4.26.1",
     "axios": "^1.2.3",
-    "bootstrap": "^5.2.3",
+    "bootstrap": "^5.3.0-alpha3",
     "chart.js": "^4.3.0",
     "formik": "^2.2.9",
     "react": "^18.2.0",
